classDiagram

	class PieceType{
		<<enumeration>>
		KING
		QUEEN
		BISHOP
		KNIGHT
		ROOK
		PAWN
	}

	class Colour{
		<<enumeration>>
		BLACK
		WHITE
	}

	class Position{
		<<interface>>
		+String()
		+Equals(Position) bool
		+CellColour()
	}

	class Piece{
		+PieceType
		+Colour
		+Position
	}

	PieceType <-- Piece
	Colour <-- Piece
	Position <-- Piece

	class Board{
		+Piece[] Pieces
		+Colour Turn
		+At(Position) (Piece, bool)
	}

	Piece <-- Board

	class Move {
		+PieceType
		+From
		+To
		+Time
	}

	PieceType <-- Move
	Position <-- Move

	class RuleSet {
		<<interface>>

		+DefaultBoard() Board
		+AllPositions() []Position
		+ParsePosition(string) (Position, error)

		+CanMove(Board, Piece, Position) bool
		+ApplyMove(Board, Move) Board
	}

	Board <-- RuleSet
	Piece <-- RuleSet
	Position <-- RuleSet
	Move <-- RuleSet

	class Match {
		+RuleSet
		+Board
		+Moves[]
	}

	RuleSet <-- Match
	Board <-- Match
	Move <-- Match


	class Boring2D {
	}
	class Chesseract {
	}

	RuleSet <|-- Boring2D
	RuleSet <|-- Chesseract


	class position2D {
	}
	class position4D {
	}

	Position <|-- position2D
	Position <|-- position4D
